# ARISE

./: .gitignore  README.md  actions.py  attributes.py  cli.py  engine.py  events.py  rules.py  storage.py  tailwind.config.js
data/: config.json
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_attributes.py  test_engine.py  test_rules.py
