[package]
name = "arise"
version = "0.1.0"
description = "ARISE Personal Growth OS Core Engine"
authors = ["Sovereign Overlord"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
